package exceptions;

public class MontantInvalideException extends RuntimeException {
    public MontantInvalideException() {
        super("Montant invalide");
    }
}

