package interfaces;

public interface CalculInteret {
    void calculerInteret();
}

